using method to access local time

--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -88,6 +88,11 @@
    
      console.log(seconds)
 
+     const minute = now.getMinutes(); // accessing minute via method
+
+     const minuteDegrees = ((minute / 60) * 350) + 90;
+
+
 
   
     }
