--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -22,6 +22,23 @@
 
   <style>
 
+    :root {
+      --base: #ffc600;
+      --spacing: 50px;
+      --blur: 10px;
+    }
+
+    img {
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+
+    }
+
+    .h2 {
+      color: var(--base);
+    }
+
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -43,8 +60,25 @@
       width: 100px;
     }
   </style>
-
+     
   <script>
+    const inputs = document.querySelectorAll('.controls input'); // selects all inputs on page
+    // query selectors return a NodeList which are not arrays
+
+    function handleUpdate() {
+      const suffix = this.dataset.sizing || ''; // accesses the data-sizing class in html 
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+
+      // dataset is an object that contains data attributes from a specific element
+    }
+
+    inputs.forEach(input => input.addEventListener('change', handleUpdate)); // allows input elements to change color and blur / space at pixel sizes
+    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate)); // allows mouse bars to move along to change blur and space effects
+
+
+
+
+
   </script>
 
 </body>
