--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -87,18 +87,18 @@
     // searched mw-category class within elements in browser
     // which accessed the list of boulevards
     // the list was then converted into array after querying the contents of the anchor tag
-    // this was subsequently mapped to return the new arrayas text content from a nodelist
+    // this was subsequently mapped to return the new arrays text content from a nodelist
+
+    
 
 
     let category = document.querySelector('.mw-category');
 
     let links = Array.from(category.querySelectorAll('a'));
 
-    let de = links.map(link => link.textContent);
-
-    
-
-
+    let de = links
+                .map(link => link.textContent)
+                .filter(streetName => streetName.includes('de'));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
