--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -89,19 +89,27 @@
     // the list was then converted into array after querying the contents of the anchor tag
     // this was subsequently mapped to return the new arrays text content from a nodelist
 
-    
 
 
-    let category = document.querySelector('.mw-category');
 
-    let links = Array.from(category.querySelectorAll('a'));
+    // let category = document.querySelector('.mw-category');
 
-    let de = links
-                .map(link => link.textContent)
-                .filter(streetName => streetName.includes('de'));
+    // let links = Array.from(category.querySelectorAll('a'));
+
+    // let de = links
+    //             .map(link => link.textContent)
+    //             .filter(streetName => streetName.includes('de'));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+
+    const alpha = people.sort((lastOne, nextOne) => {
+      const [aLast, aFirst] = lastOne.split(', ');
+      const [bLast, bFirst] = nextOne.split(', ');
+     return aLast > bLast ? 1 : -1;
+    });
+
+    console.log(alpha);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
