--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -26,6 +26,7 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -65,6 +66,7 @@
       font-size: 2em;
     }
     
+    /* nth-child selects a child of parent element, in this case the second child in the p tag*/
     .panel p:nth-child(2) {
       font-size: 4em;
     }
