--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -71,6 +71,20 @@
     // Find the comment with this ID
     // delete the comment with the ID of 823423
 
+    const index = comments.findIndex(comment => (comment.id === 823423));
+    console.log(index)
+    comments.splice(index, 1);
+    console.table(comments)
+
+    // redux version making a new array
+    // const newComments = [
+    //   ...comments.slice(0, index),
+    //   ...comments.slice(index + 1)
+    // ];
+
+    // console.table(newComments)
+
+
   </script>
 </body>
 
